--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -6,5 +6,8 @@
 <b>Description:</b>
 <%= @restaurant.description %><br>
 <br>
+<b>Rating:</b>
+<%= @restaurant.rating %><br>
+<p></p>
 <b>Review:</b>
 <%= @restaurant.review %>
