--- a/app/views/entertainments/show.html.erb
+++ b/app/views/entertainments/show.html.erb
@@ -1,6 +1,9 @@
 <h1><%=@entertainment.name%></h1>
 <b>Adress:</b>
 <p><%=@entertainment.address%></p>
+<b>Rating:</b>
+<p><%= @entertainment.rating %></p>
 <b>About: </b>
 <p><%=@entertainment.description%></p>
-
+<b>Review:</b>
+<p><%= @entertainment.review %></p>
