--- a/app/views/entertainments/show.html.erb
+++ b/app/views/entertainments/show.html.erb
@@ -1,6 +1,16 @@
-<h1><%=@entertainment.name%></h1>
-<b>Adress:</b>
-<p><%=@entertainment.address%></p>
-<b>About: </b>
-<p><%=@entertainment.description%></p>
+<h1>This is the (<strong><%= @entertainment.name %></strong>) entertainment show page!</h1>
 
+<b>Address:</b>
+<%= @entertainment.address %><br>
+<br>
+<b>Description:</b>
+<%= @entertainment.description %><br>
+<br>
+<b>Reviews:</b></br>
+<% @entertainment.entertainment_reviews.each do |entertainment_review| %>
+    <ul>
+    <b><%= entertainment_review.user.username %></b><br>
+    <br>
+    <%= entertainment_review.user_review %>
+    </ul>
+<% end %>
