--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,6 +8,6 @@
     <%=f.date_select :birthday, {order: [:month, :day, :year], prompt: { day: 'Select day', month: 'Select month', year: 'Select year' }, start_year: Date.today.year - 10, end_year: Date.today.year - 100}, {required: true}%><br>
 
     <%=f.label :hometown%>
-    <%=f.text_field :hometown%><br>
+    <%=f.text_field :hometown, value: @user.hometown.location%><br>
      <%=f.submit%>
 <%end%>
