added css nav bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,34 @@
   </head>
 
   <body>
+  <html class="no-js">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Navbar</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <header>
+        <img class="logo" src="/assets/3amigos.png" alt="logo">
+        <nav>
+            <ul class="nav__links">
+                <li><a href="http://localhost:3000/destinations">Destinations</a></li>
+                <li>
+                    <a href="#">Restaurants</a>
+                </li>
+                <li><a href="#">Entertainment</a></li>
+            </ul>
+        </nav>
+        <a class="cta" href="http://localhost:3000/users/new"><button>Signup!</button></button></a>
+    </header>
+</body>
+
+</html>
     <%= yield %>
   </body>
 </html>
