--- a/app/views/destinations/show.html.erb
+++ b/app/views/destinations/show.html.erb
@@ -9,7 +9,7 @@
 <b>Restaurants:</b><br>
 <%= @destination.restaurant_count %> restaurants near you
 <ul>
-<% Restaurant.all.each do |r| %>
+<% @destination.restaurants.each do |r| %>
   <li><%= link_to r.name, restaurant_path(r) %></li>
 <% end %>
 </ul>
@@ -17,7 +17,7 @@
 <b>Entertainments:</b><br>
 <%= @destination.entertainment_count %> entertainments near you
 <ul>
-  <% Entertainment.all.each do |e| %>
+  <% @destination.entertainments.each do |e| %>
     <li><%=link_to e.name, entertainment_path(e) %></li>
   <% end %>
 </ul>
