--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -1,3 +1,4 @@
+<div class="welcome">
 <h1>Destinations</h1>
 
 <ul>
@@ -5,3 +6,4 @@
     <li><%= link_to d.location, destination_path(d) %></li>
   <% end %>
 </ul>
+</div>
