--- a/app/views/entertainments/index.html.erb
+++ b/app/views/entertainments/index.html.erb
@@ -1,3 +1,4 @@
+<div class="welcome">
 <h1>Entertainments</h1>
 
 <ul>
@@ -5,3 +6,4 @@
     <li><%= link_to entertainment.name, entertainment_path(entertainment) %></li>
   <% end %>
 </ul>
+</div>
