--- a/app/views/destinations/new.html.erb
+++ b/app/views/destinations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="welcome">
 <h1>Add a Destination</h1>
 
 <%= form_for @destination do |f| %>
@@ -7,3 +8,4 @@
   <%= f.text_field :description %><br>
   <%= f.submit %>
 <% end %>
+</div>
