--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,9 +28,9 @@
             <ul class="nav__links">
                 <li><a href="http://localhost:3000/destinations">Destinations</a></li>
                 <li>
-                    <a href="#">Restaurants</a>
+                    <a href="http://localhost:3000/restaurants">Restaurants</a>
                 </li>
-                <li><a href="#">Entertainment</a></li>
+                <li><a href="http://localhost:3000/entertainments">Entertainment</a></li>
             </ul>
         </nav>
         <a class="cta" href="http://localhost:3000/users/new"><button>Signup!</button></button></a>
