--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,7 +1,9 @@
+<div class="welcome">
 <h1>Restaurants</h1>
 
 <ul>
-  <% @restraurants.each do |restraurant| %>
-    <li><%= link_to restraurant.name, restraurant_path(restraurant) %></li>
+  <% @restaurants.each do |restaurant| %>
+    <li><%= link_to restaurant.name, restaurant_path(restaurant) %></li>
   <% end %>
 </ul>
+</div>
