--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
+<div class="welcome">
 <h1>New User</h1>
-
+<div class="post">
 <%= form_for @user do |f| %>
     <%=f.label :name%>
     <%=f.text_field :name%><br>
@@ -15,4 +16,5 @@
     <br>
      <%=f.submit%>
 <%end%>
-
+</div>
+</div>
